# model_constructor

./: .flake8  .gitignore  .pylintrc  00_constructor.ipynb  00_core.ipynb  01_layers.ipynb  01_resnet.ipynb  02_resnet.ipynb  404.html  Makefile  README.md  index.html  index.ipynb  mkdocs.yaml  nbdocs.ini  noxfile.py  noxfile_conda.py  noxfile_conda_lint.py  noxfile_cov.py  noxfile_lint.py  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_test.txt  requirements_test_extra.txt  settings.ini  setup.cfg  setup.py
01_ModelConstructor/: index.html
02_1_Blocks/: index.html
02_2_layers/: index.html
02_XResNet/: index.html
03_MXResNet/: index.html
04_YaResNet/: index.html
05_Twist/: index.html
06_ConvMixer/: index.html
Nbs/: 001_Blocks.ipynb  00_ModelConstructor.ipynb  00_Net.ipynb  01_ModelConstructor.ipynb  01_activations.ipynb  01_layers.ipynb  02_1_Blocks.ipynb  02_2_layers.ipynb  02_XResNet.ipynb  03_MXResNet.ipynb  04_YaResNet.ipynb  05_Twist.ipynb  06_ConvMixer.ipynb  09_Net.ipynb  10_base_constructor.ipynb  11_xresnet.ipynb  README.ipynb  index.ipynb
docs/: 001_Blocks.md  00_ModelConstructor.md  01_ModelConstructor.md  01_layers.md  02_1_Blocks.md  02_2_layers.md  02_XResNet.md  03_MXResNet.md  04_YaResNet.md  05_Twist.md  06_ConvMixer.md  ConvMixer.html  MXResNet.html  ModelConstructor.html  Net.html  README.md  Twist.html  YaResNet.html  _config.yml  activations.html  base_constructor.html  constructor.html  core.html  index.html  index.md  layers.html  mkdocs.yaml  nbdocs.ini  resnet.html  sidebar.json  test_layers.html  test_net.html  test_xresnet.html  xresnet.html
model_constructor/: __init__.py  _nbdev.py  activations.py  base_constructor.py  constructor.py  convmixer.py  core.py  layers.py  model_constructor.py  mxresnet.py  net.py  resnet.py  tst_layers.py  tst_net.py  tst_net_.py  tst_net_2.py  twist.py  version.py  xresnet.py  yaresnet.py  yresnet.py
nbs/: 00_Net.ipynb  00_constructor.ipynb  01_activations.ipynb  01_layers.ipynb  02_resnet.ipynb  03_MXResNet.ipynb  03_xresnet.ipynb  04_Net.ipynb  04_YaResNet.ipynb  05_Twist.ipynb  06_YResnet.ipynb  06_YaResNet.ipynb  07_MXResNet.ipynb  08_activations.ipynb  81_Net.ipynb  (+7 more)
(+46 files in other folders)
