[metadata]
name = model_constructor
version = attr: model_constructor.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Pytorch models constructor.
keywords = pytorch models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/model_constructor
license = apache2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    tests*
    Nbs*
    docs*